--- a/zeeslag/style/style.css
+++ b/zeeslag/style/style.css
@@ -1,36 +1,32 @@
 body{
     background-color: white;
-    margin-left: 100px;
+    margin-left: 80px;
     margin-top: 50px;
     margin-right: 100px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h1{
-    font-size: x-large;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-p{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
+    font-size: 50px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #bodycontainer {
     display: flex;
-    align-content: center;
 }
 
 #zeeslagBoard {
-    width: 350px;
-    height: 350px;
+    width: 400px;
+    height: 400px;
     position: relative;
-    display: inline-block
+    display: inline-block;
+    margin-top: 30px;
 }
 
 #zeeslagBoard div {
     flex: 1;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background: black;
     display: inline-block;
     border: 1px solid white;
@@ -42,14 +38,15 @@ p{
 }
 
 #display {
-line-height: 1;
-align-content: center;
+margin: 100px;
+margin-top: 180px;
+    line-height: 1;
+align-content: right;
 }
 
 #textcontainer {
-    width: 200px;
+    width: 500px;
     height: 200px;
     display: inline-block;
-    background: lightcoral;
-    align-content: center;
+    align-content: right;
 }
