--- a/fonq_distributiecentrum/fonq_distributiecentrum/Views/StoreStock/UpdateLocalStock.cshtml
+++ b/fonq_distributiecentrum/fonq_distributiecentrum/Views/StoreStock/UpdateLocalStock.cshtml
@@ -15,6 +15,7 @@
     </div>
     <div>
         @Html.TextBoxFor(m => m.StoreStock)
+        @Html.ValidationMessageFor(m => m.StoreStock)
     </div>
     <br />
     <button type="submit">Update</button>
