--- a/fonq_distributiecentrum/fonq_distributiecentrum/Views/StoreStock/Vestigingvoorraad.cshtml
+++ b/fonq_distributiecentrum/fonq_distributiecentrum/Views/StoreStock/Vestigingvoorraad.cshtml
@@ -2,37 +2,35 @@
 @{
     ViewBag.Title = "Vestigingvoorraad";
 }
+    <center>
+        <h2>Vestigingvoorraad</h2>
+<br />
+        <br />
+        <img src="~/Images/@ViewBag.ProductImage" height="300" />
+        <h3> @ViewBag.ProductName</h3>
+        <br /><br />
 
-<h2>Vestigingvoorraad</h2>
-@foreach (var s in Model)
-{ 
-<img src="~/Images/@s.AfbeeldingProd" />
-     }
+              <table width="600px" border="1">
+                  <tr>
+                      <th>
+                          Store Name
+                      </th>
+                      <th>Location </th>
+                      <th>Store Stock</th>
+                      <th>Winkelvoorraad</th>
+                  </tr>
 
-<table width="600px" border="1">
-    <tr>
-        <th>Product ID </th>
-        <th>
-            Vestiging ID
-        </th>
-        <th>
-            Store Name
-        </th>
-        <th>Location </th>
-        <th>Store Stock</th>
-        <th>Winkelvoorraad</th>
-    </tr>
+                  @foreach (var s in Model)
+                  {
+              <tr>
+                  @Html.HiddenFor(l => s.ProductID) //hidden id, gebruiker hoeft deze niet te zien.
+                  @Html.HiddenFor(l => s.vestigingID)
+                  <td>@s.StoreName</td>
+                  <td>@s.Location</td>
+                  <td>@s.StoreStock</td>
+                  <td>@Html.ActionLink("Winkelvoorraad Aanpassen", "UpdateLocalStock", "StoreStock", new { ProductID = s.ProductID, vestigingID = s.vestigingID }, null)</td>
 
-    @foreach (var s in Model)
-    {
-<tr>
-    <td>@s.ProductID</td>
-    <td>@s.vestigingID</td>
-    <td>@s.StoreName</td>
-    <td>@s.Location</td>
-    <td>@s.StoreStock</td>
-    <td>@Html.ActionLink("WinkelVoorraad Aanpassen", "UpdateLocalStock", "StoreStock", new { ProductID = s.ProductID, vestigingID = s.vestigingID }, null)</td>
-
-</tr>
-    }
-</table>
+              </tr>
+                  }
+              </table>
+    </center>
